--- a/public/index.html
+++ b/public/index.html
@@ -13,19 +13,19 @@
         <h1>Weather sounds</h1>
         <div class="imgs-block">
             <div id="summerBlock" class="img-block summerImg">
-                <img class="PlayAndPause" src="./assets/icons/sun.svg" />
+                <img id="iconSummer" class="PlayAndPause" src="./assets/icons/sun.svg" />
                 <audio id="summer" src="./assets/sounds/summer.mp3"></audio>
             </div>
             <div id="rainyBlock" class="img-block rainyImg">
-                <img class="PlayAndPause" src="./assets/icons/cloud-rain.svg" />
+                <img id="iconRainy" class="PlayAndPause" src="./assets/icons/cloud-rain.svg" />
                 <audio id="rainy" src="./assets/sounds/rain.mp3"></audio>
             </div>
             <div id="winterBlock" class="img-block winterImg">
-                <img class="PlayAndPause" src="./assets/icons/cloud-snow.svg" />
+                <img id="iconWinter" class="PlayAndPause" src="./assets/icons/cloud-snow.svg" />
                 <audio id="winter" src="./assets/sounds/winter.mp3"></audio>
             </div>
         </div>
-
+        <input class="inputVolume" type="range" id="volume-slider" />
     </div>
     <div class="background winterImg"></div>
 </body>
